# Roatation-of-Image-by-using-OpenCV

./: BMPExporter.hpp  CMakeCache.txt  CMakeLists.txt  Constants.hpp  CvMatConverter.hpp  Main.cpp  Makefile  Matrix.hpp  Pixel.cpp  Pixel.hpp  Point.cpp  RotateImage  Rotator.hpp  Webcam.cpp  Webcam.hpp  cmake_install.cmake
